[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/mapSelect.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/blrrpixs016.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/arrow_ui.png" type="Texture" id=3]
[ext_resource path="res://Assets/Photos/Bloo Venture (DEBUG) 04_08_2022 21.29.36.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 1
outline_color = Color( 0.0705882, 0.0627451, 0.239216, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 18
outline_color = Color( 0.172549, 0.0666667, 0.239216, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.364706, 0.670588, 0.831373, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0.239216 )
shadow_size = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.168627, 0.556863, 0.760784, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="DynamicFont" id=8]
size = 18
outline_size = 1
outline_color = Color( 0.172549, 0.0666667, 0.239216, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 8
outline_size = 1
outline_color = Color( 0.172549, 0.0666667, 0.239216, 1 )
font_data = ExtResource( 2 )

[node name="mapSelect" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )
total_maps = 3

[node name="levelPreview" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 7

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.45098 )

[node name="divider" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="levelText" type="Label" parent="divider"]
margin_right = 268.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color_shadow = Color( 0, 0.513726, 0.890196, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 1 )
text = "Map Select"
align = 1
valign = 1

[node name="centre_buttons" type="HBoxContainer" parent="divider"]
margin_top = 124.0
margin_right = 268.0
margin_bottom = 480.0
size_flags_vertical = 3

[node name="spacer" type="Control" parent="divider/centre_buttons"]
margin_right = 55.0
margin_bottom = 356.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="divider/centre_buttons"]
margin_left = 59.0
margin_right = 209.0
margin_bottom = 356.0
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="divider/centre_buttons/MarginContainer"]
margin_right = 150.0
margin_bottom = 306.0

[node name="previous" type="Button" parent="divider/centre_buttons/MarginContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 35.0
rect_min_size = Vector2( 150, 35 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 6 )
text = "Previous"

[node name="levelPreview" type="TextureRect" parent="divider/centre_buttons/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 150.0
margin_bottom = 267.0
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 7

[node name="ColorRect" type="ColorRect" parent="divider/centre_buttons/MarginContainer/VBoxContainer/levelPreview"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )

[node name="Level" type="Label" parent="divider/centre_buttons/MarginContainer/VBoxContainer/levelPreview"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -14.5
margin_bottom = 14.5
custom_colors/font_color = Color( 0, 2, 2, 1 )
custom_fonts/font = SubResource( 8 )
text = "Level 1"
align = 1
valign = 1

[node name="fastestRecord" type="Label" parent="divider/centre_buttons/MarginContainer/VBoxContainer/levelPreview/Level"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.5
margin_bottom = 9.5
custom_fonts/font = SubResource( 9 )
align = 1

[node name="lvlBtn" type="Button" parent="divider/centre_buttons/MarginContainer/VBoxContainer/levelPreview"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="next" type="Button" parent="divider/centre_buttons/MarginContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 150.0
margin_bottom = 306.0
rect_min_size = Vector2( 150, 35 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 6 )
text = "Next"

[node name="spacer2" type="Control" parent="divider/centre_buttons"]
margin_left = 213.0
margin_right = 268.0
margin_bottom = 356.0
size_flags_horizontal = 3

[node name="mainmenuButton" type="TextureButton" parent="."]
margin_top = 1.0
margin_right = 56.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="divider/centre_buttons/MarginContainer/VBoxContainer/previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="divider/centre_buttons/MarginContainer/VBoxContainer/levelPreview/lvlBtn" to="." method="_on_lvlBtn_pressed"]
[connection signal="pressed" from="divider/centre_buttons/MarginContainer/VBoxContainer/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="mainmenuButton" to="." method="_on_mainmenuButton_pressed"]
